# SOL

./: CMakeLists.txt  conanfile.py  solVersionString.cmake
examples/base-application/: CMakeLists.txt
examples/base-application/include/base-application/: base_application.h
examples/base-application/src/: base_application.cpp
examples/gltf-viewer/: CMakeLists.txt
examples/gltf-viewer/include/gltf-viewer/: application.h
examples/gltf-viewer/shaders/: compile.txt  display.frag.hlsl  display.frag.spv  display.vert.hlsl  display.vert.spv
examples/gltf-viewer/src/: application.cpp  main.cpp
examples/model-viewer/: CMakeLists.txt
examples/model-viewer/include/model-viewer/: model_viewer_application.h
examples/model-viewer/shaders/: compile.txt  display.vert.hlsl  gradient.cs.spv  gradient.hlsl
examples/model-viewer/src/: main.cpp  model_viewer_application.cpp
examples/model-viewer/src/materials/: camera_material.cpp  display_material.cpp  (+5 more)
examples/pathtracing/: CMakeLists.txt
examples/pathtracing/shaders/: closesthit.hlsl  closesthit.rchit.spv  display.frag.hlsl  display.frag.spv  display.vert.spv  miss.hlsl  miss.rmiss.spv  raygen.hlsl  raygen.rgen.spv
examples/pathtracing/src/: base_application.cpp  command_pool.cpp  command_queue.cpp  edit_mesh.cpp  framebuffers.cpp  imgui_context.cpp  imgui_impl_glfw.cpp  imgui_stdlib.cpp  importer.cpp  main.cpp  materials.cpp  meshes.cpp  parser.cpp  pathtracing_application.cpp  render_passes.cpp  scenegraphs.cpp  sync_objects.cpp  textures.cpp  tiny_gltf.cpp  vulkan_objects.cpp
modules/: CMakeLists.txt
modules/sol-command/: CMakeLists.txt
modules/sol-command/src/: command_queue.cpp  i_command.cpp
modules/sol-core/: CMakeLists.txt
modules/sol-core/src/: memory_allocator_impl.cpp  utils.cpp  version.cpp  vulkan_attachment.cpp  vulkan_bottom_level_acceleration_structure.cpp  vulkan_buffer.cpp  vulkan_command_buffer.cpp  vulkan_command_buffer_list.cpp  vulkan_command_pool.cpp  vulkan_compute_pipeline.cpp  vulkan_debug.cpp  vulkan_descriptor_pool.cpp  vulkan_descriptor_set_layout.cpp  vulkan_device.cpp  vulkan_device_memory.cpp  vulkan_fence.cpp  vulkan_frame_buffer.cpp  vulkan_graphics_pipeline.cpp  vulkan_graphics_pipeline2.cpp  vulkan_graphics_pipeline_fragment.cpp  vulkan_graphics_pipeline_fragment_output.cpp  vulkan_graphics_pipeline_pre_rasterization.cpp  vulkan_graphics_pipeline_vertex_input.cpp  vulkan_image.cpp  vulkan_image_view.cpp  vulkan_instance.cpp  vulkan_memory_allocator.cpp  vulkan_memory_pool.cpp  vulkan_physical_device.cpp  vulkan_pipeline_layout.cpp  vulkan_queue.cpp  vulkan_queue_family.cpp  vulkan_ray_tracing_pipeline.cpp  vulkan_render_pass.cpp  vulkan_render_pass_layout.cpp  vulkan_sampler.cpp  vulkan_semaphore.cpp  vulkan_shader_binding_table.cpp  vulkan_shader_module.cpp  vulkan_subpass.cpp  (+5 more)
modules/sol-descriptor/: CMakeLists.txt
modules/sol-descriptor/src/: descriptor.cpp  descriptor_buffer.cpp  descriptor_layout.cpp
modules/sol-error/: CMakeLists.txt
modules/sol-error/src/: settings_validation_error.cpp  sol_error.cpp  vulkan_error.cpp  vulkan_error_handler.cpp  vulkan_missing_validation_layer_error.cpp  vulkan_no_devices_error.cpp  vulkan_shader_compilation_error.cpp
modules/sol-generated/: CMakeLists.txt  vulkan_enum_to_string.py
modules/sol-material/: CMakeLists.txt
modules/sol-material/src/: material.cpp  material2.cpp  material_instance.cpp  material_instance2.cpp  material_layout.cpp  material_layout_description.cpp
modules/sol-memory/: CMakeLists.txt
modules/sol-memory/src/: buffer.cpp  buffer_transaction.cpp  free_at_once_memory_pool.cpp  i_buffer.cpp  i_buffer_allocator.cpp  i_image.cpp  i_memory_pool.cpp  memory_manager.cpp  memory_pool_buffer.cpp  non_linear_memory_pool.cpp  ring_buffer_memory_pool.cpp  stack_memory_pool.cpp  transaction.cpp  transaction_manager.cpp  transfer_manager.cpp
modules/sol-mesh/: CMakeLists.txt
modules/sol-mesh/src/: geometry_buffer_allocator.cpp  i_mesh.cpp  index_buffer.cpp  indexed_mesh.cpp  mesh.cpp  mesh_collection.cpp  mesh_description.cpp  mesh_layout.cpp  mesh_manager.cpp  multi_mesh.cpp  shared_mesh.cpp  vertex_buffer.cpp
modules/sol-render/: CMakeLists.txt
modules/sol-scenegraph/: CMakeLists.txt
modules/sol-scenegraph/src/: node.cpp  scenegraph.cpp
modules/sol-task/: CMakeLists.txt
modules/sol-task/src/: task_graph.cpp
modules/sol-task2/: CMakeLists.txt
modules/sol-task2/src/: compiled_graph.cpp  i_task.cpp  task_graph.cpp
modules/sol-texture/: CMakeLists.txt
modules/sol-texture/src/: image2d.cpp  image2d2.cpp  sampler2d.cpp  texture2d.cpp  texture2d2.cpp  texture_collection.cpp  texture_manager.cpp
modules/sol-window/: CMakeLists.txt
modules/sol-window/src/: window.cpp
modules/spirv-reflect/: CMakeLists.txt
modules/spirv-reflect/src/: spirv_reflect.c
tests/sol-core-test/: CMakeLists.txt
tests/sol-core-test/src/: main.cpp  utils.cpp  vulkan_device.cpp  vulkan_instance.cpp  vulkan_physical_device.cpp
tests/sol-descriptor-test/: CMakeLists.txt
tests/sol-descriptor-test/src/: descriptor.cpp  descriptor_buffer.cpp  descriptor_layout.cpp  main.cpp
tests/sol-material-test/: CMakeLists.txt
tests/sol-material-test/src/: main.cpp  material.cpp  material_instance.cpp
tests/sol-memory-test/: CMakeLists.txt
tests/sol-memory-test/src/: free_at_once_memory_pool.cpp  i_memory_pool.cpp  main.cpp  non_linear_memory_pool.cpp  ring_buffer_memory_pool.cpp  stack_memory_pool.cpp
tests/sol-mesh-test/: CMakeLists.txt
tests/sol-mesh-test/src/: geometry_buffer_allocator.cpp  index_buffer.cpp  main.cpp  mesh.cpp  mesh_collection.cpp  vertex_buffer.cpp
tests/sol-render-test/: CMakeLists.txt
tests/sol-render-test/src/: main.cpp
tests/sol-scenegraph-test/: CMakeLists.txt
tests/sol-scenegraph-test/src/: main.cpp  node.cpp  scenegraph.cpp
tests/sol-texture-test/: CMakeLists.txt
tests/sol-texture-test/src/: main.cpp
tests/testutils/: CMakeLists.txt
tests/testutils/shaders/: simple_ps.hlsl  simple_vs.hlsl
tests/testutils/src/: materials.cpp  meshes.cpp  scenegraph.cpp  utils.cpp
(+492 files in other folders)
