add_subdirectory(sol-command)
add_subdirectory(sol-core)
add_subdirectory(sol-error)
add_subdirectory(sol-generated)
add_subdirectory(sol-material)
add_subdirectory(sol-memory)
add_subdirectory(sol-mesh)
add_subdirectory(sol-render)
add_subdirectory(sol-scenegraph)
add_subdirectory(sol-texture)
add_subdirectory(sol-window)
